trophy complete booblehead still not done

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <!--  import google fonts start 👇-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,500;1,400;1,500&family=Oswald:wght@200;300;400;500;600;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,500;1,400;1,500&family=Oswald:wght@200;300;400;500;600;700&family=Rubik+Distressed&display=swap" rel="stylesheet">
   <!--  import google fonts end 👆-->
     <meta charset="UTF-8">
     <title>Fallout</title>
@@ -23,14 +23,14 @@
 
 <nav class="navbar navbar-expand-lg fixed-top bg-dark">
   <div class="container-fluid">
-    <a> <img class="fallout-logo" src="images\logo2.png" alt="Bootstrap"></a>
+    <a href="index.html"> <img class="fallout-logo" src="images\logo2.png" alt="Bootstrap"></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse  justify-content-center" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item px-4">
-          <a class="nav-link" aria-current="page" href="#">Bambulky</a>
+          <a class="nav-link" aria-current="page" href="boobleheads.html">Bambulky</a>
         </li>
         <li class="nav-item px-4">
           <a class="nav-link" href="#">Úkoly</a>
@@ -45,7 +45,7 @@
             <a class="nav-link" href="#">Předměty</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link" href="#">Trofeje</a>
+            <a class="nav-link" href="trophy.html">Trofeje</a>
           </li>
       </ul>
     </div>
