boobleheads map stale neni dokonceno

--- a/boobleheads.html
+++ b/boobleheads.html
@@ -69,17 +69,20 @@
 <!--booblehead map section start 👇-->
 <section class="boobleheadmap">
 <div class="war">Bambulky</div>
-<div>ahoj <br>
-    ahoj <br>
-    ahoj <br>
-    ahoj <br>
-    ahoj <br>
-    ahoj <br>
-    ahoj <br>
-    ahoj <br>
-    v
-    ahoj <br>
-    </div>
+<div class="container booblehead-description">
+<div class="row">
+  <div class="col-6  game-description">
+    <br>
+    <br>
+    <p> Po celé pustině je rozmístěno 20 bambulek, které vylepší tvoje schopnosti, nebo získáš perfektní bonusy pro svoji postavu. </p>
+    <p> Pro rychlé a pohodlné získání všech dvaceti bambulek jsem vytvořil mapu s polohou všch bambulek </p>
+
+    <p>Koukni se do mapy na scházející bambulky a vydej se do pustiny pro zbývající bambulky, ty které už si získal si můžeš odškrtnout na seznamu vedle mapy.</p>
+
+  </div>
+  <div class="col-6"><img src="images/booblehead1.png" class="d-block boobleheadimage" alt="..."></div> 
+</div>
+</div>
 
 <!--booblehead map description start 👇-->
 
@@ -283,7 +286,7 @@
 <!--booblehead map description end 👆-->      
 <div class="container">
 <div class="row map-row">
-    <div class="col-10">
+    <div class="col-8">
         <svg version="1.2" width="210mm" height="200mm" viewBox="0 0 21000 20000" preserveAspectRatio="xMidYMid" fill-rule="evenodd" stroke-width="28.222" stroke-linejoin="round" xmlns="http://www.w3.org/2000/svg" xmlns:ooo="http://xml.openoffice.org/svg/export" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:presentation="http://sun.com/xmlns/staroffice/presentation" xmlns:smil="http://www.w3.org/2001/SMIL20/" xmlns:anim="urn:oasis:names:tc:opendocument:xmlns:animation:1.0" xml:space="preserve">
             <defs class="ClipPathGroup">
              <clipPath id="presentation_clip_path" clipPathUnits="userSpaceOnUse">
@@ -529,7 +532,33 @@
            </svg>
 
 </div>
-    <div class="col-2">perception booblehead</div>
+    <div class="col-4 booblehead-list">
+      <ul style="list-style: none;">
+        <li><button type="button" class="btn btn-danger btn-sm">Nenalezeno</button>Bambulka vnímání</li>
+        <li>Bambulka exploze</li>
+        <li>Bambulka oprav</li>
+        <li>Bambulka štěstí</li>
+        <li>Bambulka hbitosti</li>
+        <li>Bambulka výdrže</li>
+        <li>Bambulka bezezbraně</li>
+        <li>Bambulka krátké zbraně</li>
+        <li>Bambulka velké zbraně</li>
+        <li>Bambulka medicíny</li>
+        <li>Bambulka inteligence</li>
+        <li>Bambulka chladné zbraně</li>
+        <li>Bambulka otevírání zámků</li>
+        <li>Bambulka obchodu</li>
+        <li>Bambulka plížení</li>
+        <li>Bambulka vědy</li>
+        <li>Bambulka řečnictví</li>
+        <li>Bambulka síly</li>
+        <li>Bambulka charisma</li>
+        <li>Bambulka energetických zbraní</li>
+       </ul>
+
+
+
+    </div>
 </div>
 </div>
 </section>
@@ -564,6 +593,13 @@
 
     ahoj <br>
     bambulka <br>
+
+
+    <input type="checkbox" value="1" id="checkbox1" name="lang" onclick="checkUncheck(this)">1<br>
+<input type="checkbox" value="2" id="checkbox2" name="lang">2
+
+
+
 </div>
 
 
@@ -586,5 +622,6 @@
     <p class="text-center text-muted">© 2022 Libor Havránek</p>
     <p class="text-center text-muted">Icons by <a href="https://fontawesome.com/">fontawesome</a></p>
     <p class="text-center text-muted">Images by <a href="https://pixabay.com/">Pixabay</a></p>
+    <p class="text-center text-muted">Images by <a href="https://www.pngkey.com/">PNGkey</a></p>
   </footer>
 </html>
