--- a/index.html
+++ b/index.html
@@ -301,5 +301,7 @@
     <p class="text-center text-muted">© 2022 Libor Havránek</p>
     <p class="text-center text-muted">Icons by <a href="https://fontawesome.com/">fontawesome</a></p>
     <p class="text-center text-muted">Images by <a href="https://pixabay.com/">Pixabay</a></p>
+    <p class="text-center text-muted">Images by <a href="https://www.pngkey.com/">PNGkey</a></p>
+    https://www.pngkey.com/
   </footer>
 </html>
