--- a/trophy.html
+++ b/trophy.html
@@ -1071,5 +1071,6 @@
     <p class="text-center text-muted">© 2022 Libor Havránek</p>
     <p class="text-center text-muted">Icons by <a href="https://fontawesome.com/">fontawesome</a></p>
     <p class="text-center text-muted">Images by <a href="https://pixabay.com/">Pixabay</a></p>
+    <p class="text-center text-muted">Images by <a href="https://www.pngkey.com/">PNGkey</a></p>
   </footer>
 </html>
