map buttons working

--- a/boobleheads.html
+++ b/boobleheads.html
@@ -89,9 +89,9 @@
 <div class="perception-booblehead-description hide">
     <h4>Bambulka Vnímání</h4>
     <p class="location">Lokace: Museum of Freedom</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch perception-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input perception-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
@@ -99,9 +99,9 @@
 <div class="explosive-booblehead-description hide">
     <h4>Bambulka Exploze</h4>
     <p class="location">Lokace: Saugus Ironworks</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch explosive-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input explosive-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
@@ -109,19 +109,19 @@
 <div class="repair-booblehead-description hide">
     <h4>Bambulka Oprav</h4>
     <p class="location">Lokace: Corvega Assembly Plant</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch repair-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input repair-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
 
 <div class="luck-booblehead-description hide">
-    <h4 class="location">Bambulka Štěstí</h4>
-    <p>Lokace: Spectacle Island</p>
-    <p class="unsearch">Nenalezeno</p>
+    <h4>Bambulka Štěstí</h4>
+    <p class="location">Lokace: Spectacle Island</p>
+    <p class="unsearch luck-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input luck-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
@@ -129,9 +129,9 @@
 <div class="agility-booblehead-description hide">
     <h4>Bambulka Hbitosti</h4>
     <p class="location">Lokace: Wreck of the FMS Northern Star</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch agility-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input agility-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
@@ -139,9 +139,9 @@
 <div class="endurance-booblehead-description hide">
     <h4>Bambulka Výdrže</h4>
     <p class="location">Lokace: Poseidon Energy</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch endurance-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input endurance-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
@@ -149,9 +149,9 @@
 <div class="unarmed-booblehead-description hide">
     <h4>Bambulka Bezezbraně</h4>
     <p class="location">Lokace: Atom Cats Garage</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch unarmed-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input unarmed-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
@@ -159,9 +159,9 @@
 <div class="smallguns-booblehead-description hide">
     <h4>Bambulka krátké zbraně</h4>
     <p class="location">Lokace: Gunners Plaza</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch smallguns-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input smallguns-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
@@ -169,9 +169,9 @@
 <div class="bigguns-booblehead-description hide">
     <h4>Bambulka Velké zbraně</h4>
     <p class="location">Lokace: Vault 95</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch bigguns-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input bigguns-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
@@ -180,9 +180,9 @@
 <div class="medicine-booblehead-description hide">
     <h4>Bambulka medicíny</h4>
     <p class="location">Lokace: Vault 81</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch medicine-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input medicine-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
@@ -190,9 +190,9 @@
 <div class="intelligence-booblehead-description hide">
     <h4>Bambulka Inteligence</h4>
     <p class="location">Lokace: Boston Public Library</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch intelligence-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input intelligence-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
@@ -201,9 +201,9 @@
 <div class="meele-booblehead-description hide">
     <h4>Bambulka Chladné zbraně</h4>
     <p class="location">Lokace: Trinity Tower</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch meele-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input meele-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
@@ -212,9 +212,9 @@
 <div class="lock-booblehead-description hide">
     <h4>Bambulka Otevírání zámků</h4>
     <p class="location">Lokace: Pickman Gallery</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch lock-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input lock-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
@@ -222,9 +222,9 @@
 <div class="barter-booblehead-description hide">
     <h4>Bambulka Obchodu</h4>
     <p class="location">Lokace: Longneck Lukowskis Cannery</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch barter-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input barter-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 </div>
@@ -232,54 +232,54 @@
 <div class="sneak-booblehead-description hide">
     <h4>Bambulka Plížení</h4>
     <p class="location">Lokace: Dunwich Borers</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch sneak-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input sneak-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 
 <div class="science-booblehead-description hide">
     <h4>Bambulka Vědy</h4>
     <p class="location">Lokace: Malden Middle School - Vault 75</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch science-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input science-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 
 <div class="speech-booblehead-description hide">
-    <h4 class="location">Bambulka Řečnictví</h4>
-    <p>Lokace: Park Street Station - Vault 114</p>
-    <p class="unsearch">Nenalezeno</p>
+    <h4>Bambulka Řečnictví</h4>
+    <p class="location">Lokace: Park Street Station - Vault 114</p>
+    <p class="unsearch speech-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input speech-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 
 <div class="strength-booblehead-description hide">
     <h4>Bambulka Síly</h4>
     <p class="location">Lokace: Mass Fusion building</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch strength-unsearch">Nenalezeno</p>
     <div>
-    <input class="form-check-input" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
+    <input class="form-check-input strength-checkbox" type="checkbox"           id="checkboxNoLabel"    value="" aria-label="...">
     </div>
 </div>
 
 <div class="charisma-booblehead-description hide">
     <h4>Bambulka Charisma</h4>
     <p class="location">Lokace: Parsons State Insane Asylum</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch charisma-unsearch">Nenalezeno</p>
     <div>
-        <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="...">
+        <input class="form-check-input charisma-checkbox" type="checkbox" id="checkboxNoLabel" value="" aria-label="...">
       </div>
 </div>
 
 <div class="energyweapon-booblehead-description hide">
     <h4>Bambulka Energetických zbraní</h4>
     <p class="location">Lokace: Fort Hagen Command Center</p>
-    <p class="unsearch">Nenalezeno</p>
+    <p class="unsearch energyweapon-unsearch">Nenalezeno</p>
     <div>
-        <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="...">
+        <input class="form-check-input energyweapon-checkbox" type="checkbox" id="checkboxNoLabel" value="" aria-label="...">
       </div>
 </div>
 
@@ -534,26 +534,48 @@
 </div>
     <div class="col-4 booblehead-list">
       <ul style="list-style: none;">
-        <li><button type="button" class="btn btn-danger btn-sm">Nenalezeno</button>Bambulka vnímání</li>
-        <li>Bambulka exploze</li>
-        <li>Bambulka oprav</li>
-        <li>Bambulka štěstí</li>
-        <li>Bambulka hbitosti</li>
-        <li>Bambulka výdrže</li>
-        <li>Bambulka bezezbraně</li>
-        <li>Bambulka krátké zbraně</li>
-        <li>Bambulka velké zbraně</li>
-        <li>Bambulka medicíny</li>
-        <li>Bambulka inteligence</li>
-        <li>Bambulka chladné zbraně</li>
-        <li>Bambulka otevírání zámků</li>
-        <li>Bambulka obchodu</li>
-        <li>Bambulka plížení</li>
-        <li>Bambulka vědy</li>
-        <li>Bambulka řečnictví</li>
-        <li>Bambulka síly</li>
-        <li>Bambulka charisma</li>
-        <li>Bambulka energetických zbraní</li>
+        <li class="perception-li">
+          <button type="button" class="btn btn-danger btn-sm"
+           id="perception-button">Nenalezeno</button>
+          Bambulka vnímání</li>
+
+        <li class="explosive-li"><button type="button" class="btn btn-danger btn-sm" id="explosive-button">Nenalezeno</button>Bambulka exploze</li>
+
+        <li class="repair-li"><button type="button" class="btn btn-danger btn-sm" id="repair-button">Nenalezeno</button>Bambulka oprav</li>
+
+        <li class="luck-li"><button type="button" class="btn btn-danger btn-sm" id="luck-button">Nenalezeno</button>Bambulka štěstí</li>
+
+        <li class="agility-li"><button type="button" class="btn btn-danger btn-sm" id="agility-button">Nenalezeno</button>Bambulka hbitosti</li>
+
+        <li class="endurance-li"><button type="button" class="btn btn-danger btn-sm" id="endurance-button">Nenalezeno</button>Bambulka výdrže</li>
+
+        <li class="unarmed-li"><button type="button" class="btn btn-danger btn-sm" id="unarmed-button">Nenalezeno</button>Bambulka bezezbraně</li>
+
+        <li class="smallguns-li"><button type="button" class="btn btn-danger btn-sm" id="smallguns-button">Nenalezeno</button>Bambulka krátké zbraně</li>
+
+        <li class="bigguns-li"><button type="button" class="btn btn-danger btn-sm" id="bigguns-button">Nenalezeno</button>Bambulka velké zbraně</li>
+
+        <li class="medicine-li"><button type="button" class="btn btn-danger btn-sm" id="medicine-button">Nenalezeno</button>Bambulka medicíny</li>
+
+        <li class="intelligence-li"><button type="button" class="btn btn-danger btn-sm" id="intelligence-button">Nenalezeno</button>Bambulka inteligence</li>
+
+        <li class="meele-li"><button type="button" class="btn btn-danger btn-sm" id="meele-button">Nenalezeno</button>Bambulka chladné zbraně</li>
+
+        <li class="lock-li"><button type="button" class="btn btn-danger btn-sm" id="lock-button">Nenalezeno</button>Bambulka otevírání zámků</li>
+
+        <li class="barter-li"><button type="button" class="btn btn-danger btn-sm" id="barter-button">Nenalezeno</button>Bambulka obchodu</li>
+
+        <li class="sneak-li"><button type="button" class="btn btn-danger btn-sm" id="sneak-button">Nenalezeno</button>Bambulka plížení</li>
+
+        <li class="science-li"><button type="button" class="btn btn-danger btn-sm" id="science-button">Nenalezeno</button>Bambulka vědy</li>
+
+        <li class="speech-li"><button type="button" class="btn btn-danger btn-sm" id="speech-button">Nenalezeno</button>Bambulka řečnictví</li>
+
+        <li class="strength-li"><button type="button" class="btn btn-danger btn-sm" id="strength-button">Nenalezeno</button>Bambulka síly</li>
+
+        <li class="charisma-li"><button type="button" class="btn btn-danger btn-sm" id="charisma-button">Nenalezeno</button>Bambulka charisma</li>
+
+        <li class="energyweapon-li"><button type="button" class="btn btn-danger btn-sm" id="energyweapon-button">Nenalezeno</button>Bambulka energetických zbraní</li>
        </ul>
 
 
