--- a/boobleheads.html
+++ b/boobleheads.html
@@ -591,6 +591,8 @@
 
 <div class="container">
 
+
+  <input class="form-check-input" type="checkbox"           id="hidebox"    value="" aria-label="...">
     ahoj <br>
     bambulka <br>
     ahoj <br>
