bobblehead profile is done

--- a/boobleheadmap.html
+++ b/boobleheadmap.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#">Úkoly</a>
           </li>
           <li class="nav-item px-4">
-            <a class="nav-link" href="#">Mapa</a>
+            <a class="nav-link" href="#">Mapy</a>
           </li>
           <li class="nav-item px-4">
             <a class="nav-link" href="#">Postavy</a>
