--- a/boobleheads.html
+++ b/boobleheads.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="#">Úkoly</a>
         </li>
         <li class="nav-item px-4">
-          <a class="nav-link" href="#">Mapa</a>
+          <a class="nav-link" href="#">Mapy</a>
         </li>
         <li class="nav-item px-4">
           <a class="nav-link" href="#">Postavy</a>
@@ -60,7 +60,7 @@
 <!--booblehead image section start 👇-->
 
 <div class="image-container"><img class="img-fluid booblehead-background" src="images/boobleheadpozadi.jpg" alt="">
-<div class="boobleheads-napis">boobleheads</div>
+<div class="boobleheads-napis">bobbleheads</div>
 </div>
 
 <!--booblehead image section end 👆-->
@@ -98,17 +98,17 @@
 <div class="container-fluid booblehead-center">
   <div class="row">
 
-    <div class="col-4"> <img class="side-booble" src="images/boobleheads/Fo4_agility_bobblehead (1).png" alt="">
+    <div class="col-4"> <img class="side-booble" src="images/boobleheads/agility_bobblehead.png" alt="">
     <div class="booble-popis-hbitost">Hbitost</div>
     </div>
 
-    <div class="col-4"> <img class="center-booble" src="images/boobleheads/Perception_bobblehead (1).png" alt="">
+    <div class="col-4"> <img class="center-booble" src="images/boobleheads/Perception_bobblehead.png" alt="">
       <div class="booble-popis-vnimani">Vnímání</div>
     </div>
     
   
 
-    <div class="col-4"> <img class="side-booble" src="images/boobleheads/Fo4_endurance_bobblehead (1).png" alt="">
+    <div class="col-4"> <img class="side-booble" src="images/boobleheads/endurance_bobblehead.png" alt="">
       <div class="booble-popis-rychlost">Rychlost</div>
     </div>
     
@@ -130,9 +130,9 @@
   <div class="container-fluid booblehead-list-container">
     <div class="row">
 
-      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Perception_bobblehead (1).png" alt=""></div>
+      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Perception_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
-        <div class="booble-name">Bambulka Vnímání/Perception Bobblehead</div>
+        <div class="booble-name"><a href="./boobleheads/perception-booblehead.html">Bambulka Vnímání/Perception Bobblehead</a></div>
         <div class="booble-description">Tato bambulka se nachází v lokaci Museum of freedom/Museum svobody. V místnosti, kde jsou schovaní Minitmenti před nájezdníky je položena na stole.</div>
       </div>
     </div>
@@ -141,7 +141,7 @@
 
     <div class="row">
 
-      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Explosives_Bobblehead-change.png" alt=""></div>
+      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Explosives_Bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
         <div class="booble-name">Bambulka Exploze/Explosive Bobblehead</div>
         <div class="booble-description">Nachází se v Saugus Ironworks. V místnosti, ve které je Slag, který bambulku chrání se nachází za Slagem na rantlu řídícího panelu.</div>
@@ -163,7 +163,7 @@
 
     <div class="row">
 
-      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Luck_bobblehead (1).png" alt=""></div>
+      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Luck_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
         <div class="booble-name">Bambulka Štěstí/Luck Bobblehead</div>
         <div class="booble-description">Bambulku Štěstí naleznete na na jihovýchodním konci ostrova Spectacle Island. V druhém patře napůl zatopené zelené lodi je otevřená skříňka a v ní je uložena bambulka.</div>
@@ -174,7 +174,7 @@
 
     <div class="row">
 
-      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Fo4_agility_bobblehead (1).png" alt=""></div>
+      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/agility_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
         <div class="booble-name">Bambulka Hbitosti/Agility Bobblehead</div>
         <div class="booble-description">Tuto bambulku naleznete v lokaci Wreck of the FMS Northern Star. Na přídi lodi sjou dvě prkna a bambulka leží na konci těchto prken. POZOR jde snadno přehlédnout</div>
@@ -185,7 +185,7 @@
 
     <div class="row">
 
-      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Fo4_endurance_bobblehead (1).png" alt=""></div>
+      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/endurance_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
         <div class="booble-name">Bambulka Výdrže/Endurance Bobblehead</div>
         <div class="booble-description">Bambulka výdrže se nachází v lokaci Poseidon Energy. V této rozsáhlé továrně se nachází místnost ve které na stole najdete tuto bambulku.</div>
@@ -196,7 +196,7 @@
 
     <div class="row">
 
-      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Fo4_unarmed_bobblehead.png" alt=""></div>
+      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/unarmed_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
         <div class="booble-name">Bambulka Bezezbraně/Unarmed Bobblehead</div>
         <div class="booble-description">V lokaci Atom Cats Garage ve stodole, která stojí za Red Rocket je vrak auta. Na kapotě tohoto vraku je Bambulka Bezezbraně.</div>
@@ -219,7 +219,7 @@
 
       <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Big_guns_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
-        <div class="booble-name">Bambulka Velké Zbraně/Big Guns Bobblehead</div>
+        <div class="booble-name"> <a href=""> Bambulka Velké Zbraně/Big Guns Bobblehead</a></div>
         <div class="booble-description">Bambulka velkých zbraní je ve valutu 95. Ve spodní části valutu najdete díru ve stěně, kudy se dostanete do místnosti s bambulkou, která je umístěna na rádiu </div>
       </div>
     </div>
@@ -228,7 +228,7 @@
 
     <div class="row">
 
-      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/BH-Medicine.png" alt=""></div>
+      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Medicine_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
         <div class="booble-name">Bambulka Medicíny/Medicine Bobblehead</div>
         <div class="booble-description">Ve Valutu 81 se nachází bambulka, kterou získáte po splnění úkolu kde zachráníte Austina. Bambulka se nachází v místnosti s robotem na stole vedle počítače.</div>
@@ -239,7 +239,7 @@
 
     <div class="row">
 
-      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Intelligence_bobblehead (1).png" alt=""></div>
+      <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Intelligence_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
         <div class="booble-name">Bambulka Inteligence/Intelligence Bobblehead</div>
         <div class="booble-description">V Boston Public Library se nachází bambulka inteligence v místnosti se zásobami, která se nachází za halou, kde jsou opevněné věže ničící útočící mutanty. Bambulka v místnosti je umístěna na řídícím panelu.</div>
@@ -250,7 +250,7 @@
 
     <div class="row">
 
-    <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/BH-Melee.png" alt=""></div>
+    <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Melee_bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
       <div class="booble-name">Bambulka Chladné zbraně/Meele Bobblehead</div>
       <div class="booble-description">Triniti Tower, věž plná mutantů, kterou se musíte probojovat k Bambulce chladných zbraní. Bambulka je umístěna na vrcholku věže v cele na improvizovaném stolku z prkna a cihel.</div>
@@ -261,7 +261,7 @@
 
   <div class="row">
 
-    <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Fo4_Lock_picking_bobblehead.png" alt=""></div>
+    <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Lock_picking_bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
       <div class="booble-name">Bambulka Otevírání zámků/Lockpick Bobblehead</div>
       <div class="booble-description"> Tuto Bambulku naleznete v lokaci Pickman Gallery. V této galerii se nachází v poslední komnatě před výstupem pryč. Leží na zemi vedle koše.</div>
@@ -282,7 +282,7 @@
 
   <div class="row">
 
-    <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Sneak_Bobblehead_model_FO4.png" alt=""></div>
+    <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Sneak_Bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
       <div class="booble-name">Bambulka Plížení/Sneak Bobblehead</div>
       <div class="booble-description">V lomu Dunwich Borers je třeba zajít dovnitř do lomu a u terminálu číslo 4 najdete tuto Bambulku na železném stolečku vedle lucerny.</div>
@@ -303,7 +303,7 @@
 
   <div class="row">
 
-    <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Speech-bobblehead.png" alt=""></div>
+    <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Speech_bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
       <div class="booble-name">Bambulka Řečnictví/Speech Bobblehead</div>
       <div class="booble-description">Přes stanici Park Street Station se dostanete do Valutu 114. V místnosti správce, kde je zavřený Nick Valentine najdete na stole Bambulku Řečnictví</div>
@@ -314,7 +314,7 @@
 
   <div class="row">
 
-    <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Fo4strengthbobblehead (1).png" alt=""></div>
+    <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/strength_bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
       <div class="booble-name">Bambulka Síly/Strength Bobblehead</div>
       <div class="booble-description"> Bambulka síly se nachází v Mass Fusion Building v nejvyšším patře budovy. Je na vrcholku kovové sochy s výhledem na vstupní halu. </div>
@@ -325,7 +325,7 @@
 
   <div class="row">
 
-    <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/FO4charismabobblehead (1).png" alt=""></div>
+    <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/charisma_bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
       <div class="booble-name">Bambulka Charisma/Charisma Bobblehead</div>
       <div class="booble-description">V Parsons State Insane Asylum můžete najít bambulku charisma v Jackově kanceláři kousek od výtahu do tajné části na jeho pracovním stole.</div>
