--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <a class="nav-link" href="#">Úkoly</a>
         </li>
         <li class="nav-item px-4">
-          <a class="nav-link" href="#">Mapa</a>
+          <a class="nav-link" href="#">Mapy</a>
         </li>
         <li class="nav-item px-4">
           <a class="nav-link" href="#">Postavy</a>
